@@ -1,4 +1,5 @@
 recent:
+	disable negation of conjunctions ("or"s, aka brace-grouping) for now
 	add "no skeleton" option
 	fix a couple of segfaults/aborts where input filter
 	is invalid
@@ -32,4 +33,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.13 2002/01/02 14:49:33 matthew Exp $
+$Id: HISTORY,v 1.14 2002/01/25 17:04:55 matthew Exp $
